# dparser

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .travis.yml  ANALYSIS_CHECK_PATH_PRIORTIES.md  AUTHORS  BUG_FIXES.md  BUILD_VERSION  CHANGES  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  ChangeLog  DPARSER_AGENTS.md  DSYMTAB_ANALYSIS.md  LICENSE.txt  MANIFEST.in  Makefile  Makefile.am  Makefile.in  NEWS  NOTICE  README.md  RECOVERY_AND_EPSILON_HINTS.md  SAFE_RUST.md  SPECULATIVE_PARSING.md  TODO  aclocal.m4  analysis_ambiguity.md  arg.c  arg.h  autogen.sh  baseline  buildall  candid.g  configure  configure.ac  coverage.py  (+75 more)
.github/workflows/: c-cpp.xml
ansic/: ansic.g
docs/: ambiguities.md  faq.md  manual.md  todo.md
m4/: ac_path_win32.m4  dparser_disable_gc.m4  dparser_set_version.m4  swig.m4
perl/: ChangeLog  D.pm  D.pm.in  D.xs  Dxs.c  Dxs.h  MANIFEST  META.yml  Makefile  Makefile.PL  Makefile.PL.in  Makefile.PL.orig  Makefile.am  Makefile.in  perl.exe.stackdump  perl_wrap.c  typemap
perl/Convert-DParser/: ChangeLog  MANIFEST  Makefile  Makefile.PL
perl/Convert-DParser/contrib/24.080/: SS-Operations.EXP  SS-Protocol.XRF
perl/Convert-DParser/contrib/29.002/: MAP-Errors.EXP  MAP-LocationServiceOperations.EXP  MAP-OperationAndMaintenanceOperations.EXP  MAP-ShortMessageServiceOperations.EXP
perl/Convert-DParser/contrib/Asn_Jun03/: Class-definitions.asn  Constant-definitions.asn  Pdu-definitions.asn
perl/Convert-DParser/contrib/Gsm_R99/: Description.gsm
perl/Convert-DParser/contrib/TS34123-3-520/: HS_ENHv520.mp  IR_Uv520.mp  SMSv520.mp
perl/Convert-DParser/lib/Convert/DParser/: ASN1.pm
perl/Convert-DParser/lib/Convert/DParser/ASN1/: Decode.pm  Encode.pm  Grammar.pm
perl/Convert-DParser/lib/Convert/DParser/ASN1/Decode/: BER.pm  PER.pm
perl/Convert-DParser/t/: 50-ASN1.t  tests.pm
perl/contrib/: ASN1.g
perl/contrib/24.080/: SS-Errors.EXP
perl/contrib/29.002/: MAP-CallHandlingOperations.EXP  MAP-DialogueInformation.EXP  MAP-Group-Call-Operations.EXP  MAP-MobileServiceOperations.EXP  MAP-Protocol.XRF  MAP-SupplementaryServiceOperations.EXP
perl/contrib/Asn_Jun03/: InformationElements.asn  Internode-definitions.asn
perl/contrib/Csn_R99/: Description.csn
perl/contrib/TS34123-3-520/: MACv520.mp  RABv520.mp  RLCv520.mp  rrc5b0.asn
perl/doc/: d_structures.fig
perl/lib/Parser/D/: Grammar.pm  Node.pm  Tables.pm
perl/t/: 0-signature.t  10-grammar.t  11-tables.t  20-D.t  30-Node.t  50-ASN1.t  test.g  tests.pm
python/: LICENSE.txt  Makefile  Makefile.am  Makefile.in  README  __init__.py  build_pyx.py  dparser.i  dparser.py  dparser.pyx  dparser.swig_py  dparser_wrap.c  make_tables.c  parser_dparser.swig_py  pydparser.c  pydparser.h  pyproject.toml  setup.py  setup.py.in
python/contrib/: dparserpy-syntax_error.py
python/tests/: conftest.py  dparser_binding_behavior.md  runtests.py  test.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test9.py  test_ambiguity.py  test_basic_arithmetic.py  test_errors.py  test_expression_eval.py  test_multi_alternative.py  test_parse_nodes.py  test_speculative_gate.py  test_speculative_parsing.py  test_string_replace.py
rust/: Cargo.toml  Makefile  README.md  build.rs
rust/dparser_builder/: Cargo.toml
rust/dparser_builder/src/: main.rs
rust/dparser_lib/: Cargo.toml  README.md  build.rs
rust/dparser_lib/src/: arena.rs  bindings.rs  builder.rs  epsilon.rs  error.rs  grammar.rs  lib.rs  parse.rs  parser_ctx.rs  pnode.rs  priority.rs  reduce.rs  scan.rs  shift.rs  tables.rs  tree.rs  types.rs  whitespace.rs
rust/example/: Cargo.toml  build.rs
rust/example/src/: main.rs  my_grammar.g
rust/integration_tests/: Cargo.toml  build.rs
rust/integration_tests/grammars/: test_ambiguity.g  test_reject.g
rust/integration_tests/src/: lib.rs
rust/integration_tests/tests/: test_ambiguity.rs  test_reject.rs
rust/src/: binary_format.rs  builder.rs  epsilon.rs  error.rs  priority.rs  scan.rs  shift.rs  tables.rs.patch  tree.rs  whitespace.rs
tests/: Makefile  Makefile.am  Makefile.in  ansic.test.g  g10.test.g  g22.test.g.1.check  g23.test.g.1.check  g25.test.g  g27.rust.g  g27.test.g  g28.test.g  g28.test.g.2  g28.test.g.2.check  g29.test.g  g31.test.g  g32.test.g  g33.test.g  g38.test.g.flags  g4.test.g  g40.test.g  g40.test.g.1.check  g41.test.g.1.flags  g45.test.g  g47.test.g  g48.test.g  g50.test.g.1.check  g51.test.g  g51.test.g.1  g51.test.g.1.check  g52.test.g  g52.test.g.1  g52.test.g.1.check  g52.test.g.2  g52.test.g.2.check  g52.test.g.3  g52.test.g.3.check  g52.test.g.4  g52.test.g.4.check  mcrl2_syntax.test.g  mcrl2_syntax.test.g.1  (+193 more)
verilog/: Makefile  Makefile.am  Makefile.in  ambig.c  ambig.cpp  main.c  verilog.g.d_parser.c  vparse.c  vparse.cpp  vparse.h
