[build-system]
requires = ["setuptools>=70", "cython>=3"]
build-backend = "setuptools.build_meta"

[project]
name = "dparser"
version = "1.31"
description = "DParser for Python"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
]

[project.urls]
Homepage = "https://github.com/jplevyak/dparser"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

